# order-matching-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  README.md  analyze_engine_bench.py  engine_bench.cpp  run_engine_bench.sh  spsc_ring_bench.cpp
bench/results/: README.md
bench/results/cancel/: command.txt  environment.txt  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  summary.txt
bench/results/cancel_1m/: command.txt  environment.txt  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  summary.txt
bench/results/cross/: command.txt  environment.txt  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  summary.txt
bench/results/cross_1m/: command.txt  environment.txt  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  summary.txt
bench/results/insert/: command.txt  environment.txt  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  summary.txt
bench/results/insert_1m/: command.txt  environment.txt  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  summary.txt
bench/results/mixed/: command.txt  environment.txt  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  summary.txt
bench/results/mixed_1m/: command.txt  environment.txt  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  summary.txt
bench/results/mixed_2m/: command.txt  environment.txt  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  summary.txt
docs/: engine-benchmark-results.md  fuzz-test-record.md  ring-benchmark-record.md
include/orderbook/: bitmap.hpp  book.hpp  book_dump.hpp  codec.hpp  config.hpp  demo_renderer.hpp  event_logger.hpp  l2_book.hpp  matcher.hpp  matching_loop.hpp  pool.hpp  spsc_ring.hpp  synthetic_generator.hpp  text_trace_parser.hpp  time.hpp  trace_replay.hpp  types.hpp
include/orderbook/tcp/: connection.hpp
src/: CMakeLists.txt  codec.cpp  text_trace_parser.cpp
test/: CMakeLists.txt  bitmap_test.cpp  book_dump_test.cpp  book_test.cpp  cancel_heavy_replay_test.sh  codec_test.cpp  demo_mode_test.sh  demo_renderer_test.cpp  deterministic_replay_test.sh  differential_fuzz_test.cpp  engine_bench_run_test.sh  event_logger_test.cpp  l2_book_test.cpp  matcher_test.cpp  matching_loop_test.cpp  pool_test.cpp  reference_book.hpp  reference_test.cpp  smoke_test.cpp  spsc_ring_stress.cpp  spsc_ring_test.cpp  synthetic_generator_test.cpp  tcp_pipeline_test.cpp  text_trace_parser_test.cpp  threaded_differential_pipeline_test.cpp  trace_replay_test.cpp
tools/: CMakeLists.txt  README.md  client.cpp  generate_saved_commands.cpp  run_engine.cpp  tcp_server.cpp  text_to_saved_commands.cpp
