add_executable(text_to_saved_commands text_to_saved_commands.cpp)
target_link_libraries(text_to_saved_commands PRIVATE orderbook_codec orderbook_trace_parser)

add_executable(generate_saved_commands generate_saved_commands.cpp)
target_link_libraries(generate_saved_commands PRIVATE orderbook_codec orderbook_core)
